fixed path variables.

--- a/launch/Husky Teleop.desktop
+++ b/launch/Husky Teleop.desktop
@@ -4,7 +4,6 @@ Type=Application
 Terminal=true
 Icon[en_US]=/home/hatfield/Clearpath/catkin_ws/install/share/teleop/icons/husky.jpg
 Name[en_US]=Husky Teleop
-Exec=rosrun teleop husky-teleop.sh
-#Exec=/usr/bin/husky-teleop.sh
+Exec=/home/hatfield/Clearpath/ROS_Packages/teleop/launch/husky-teleop.sh
 Name=Husky Teleop
 Icon=/home/hatfield/Clearpath/catkin_ws/install/share/teleop/icons/husky.jpg
