--- a/launch/Jackal Teleop.desktop
+++ b/launch/Jackal Teleop.desktop
@@ -4,7 +4,6 @@ Type=Application
 Terminal=true
 Icon[en_US]=/home/clayauld/Clearpath/catkin_ws/install/share/teleop/icons/jackal.jpg
 Name[en_US]=Jackal Teleop
-Exec=rosrun teleop jackal-teleop.sh
-#Exec=/usr/bin/jackal-teleop.sh
+Exec=/home/hatfield/Clearpath/ROS_Packages/teleop/launch/jackal-teleop.sh
 Name=Jackal Teleop
 Icon=/home/clayauld/Clearpath/catkin_ws/install/share/teleop/icons/jackal.jpg
